<resources>
    <string name="app_name">Calculator</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tng">tan</string>
    <string name="ctn">ctn</string>
    <string name="exp">e</string>
    <string name="pi">pi</string>
    <string name='left_bracket'>(</string>
    <string name='right_bracket'>)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="power">^</string>
    <string name="div">/</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="clear">clear</string>
    <string name="del">del</string>
</resources>