<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClickClear"
                android:text="@string/clear"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClickDel"
                android:text="@string/del"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/sin"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/cos"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/tng"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/ctn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/pi"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/exp"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/left_bracket"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/right_bracket"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/nine"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/eight"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/seven"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/plus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/six"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/five"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/four"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/three"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/two"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/one"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/mul"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/point"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/zero"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClickEqual"
                android:text="@string/equal"/>
            <Button
                style="@style/KeyboardButton"
                android:onClick="onClick"
                android:text="@string/div"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>